--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div id="banner">
+    <div class="banner">
       <h1>Discover hidden places in the world around you</h1>
     </div>
-    <div id="link">
+    <div class="link">
       <h3>Download Excursion (Coming soon!)</h3>
+    </div>
+      <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+      </video>
     </div>
   </body>
 </html>
