added video loop

--- a/index.html
+++ b/index.html
@@ -11,8 +11,28 @@
     <div class="link">
       <h3>Download Excursion (Coming soon!)</h3>
     </div>
-      <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+      <video src="./resources/videos/excursion.mp4" autoplay loop="true">
       </video>
+    <div class="banner2">
+      <h1>Your personal travel guide</h1>
+    </div>
+    <div class="description">
+      <h2>Excursion remembers places you
+        like, and recommends new points of
+        interest around you.</h2>
+    </div>
+    <div class="camp">
+      <img src="./resources/images/camp.jpg" alt="Campground">
+    </div>
+    <div class="phone">
+      <img src="./resources/images/phone.png" alt="Phone">
+    </div>
+
+    <div class="banner3">
+      <h1>Coming Soon for iPhone and Android</h1>
+    </div>
+    <div class="link">
+      <h3>Download Excursion (Coming soon!)</h3>
     </div>
   </body>
 </html>
