--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>Discover hidden places in the world around you</h1>
     </div>
     <div class="link">
-      <h3>Download Excursion (Coming soon!)</h3>
+      <h3><a href="">Download Excursion (Coming soon!)</a></h3>
     </div>
       <video src="./resources/videos/excursion.mp4" autoplay loop="true">
       </video>
@@ -28,11 +28,11 @@
       <img src="./resources/images/phone.png" alt="Phone">
     </div>
 
-    <div class="banner3">
+    <div class="banner2">
       <h1>Coming Soon for iPhone and Android</h1>
     </div>
     <div class="link">
-      <h3>Download Excursion (Coming soon!)</h3>
+      <h3><a href="">Download Excursion (Coming soon!)</a></h3>
     </div>
   </body>
 </html>
