--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <div class="link">
       <h3><a href="">Download Excursion (Coming soon!)</a></h3>
     </div>
+    <footer>&copy; Excursion</footer>
   </body>
 </html>
